--- a/app/src/main/res/layout/item_container_new.xml
+++ b/app/src/main/res/layout/item_container_new.xml
@@ -33,13 +33,12 @@
             android:layout_marginTop="@dimen/sb_size_36"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
-            android:fontFamily="@font/gotham_font"
+            style="@style/BoldText"
             android:singleLine="true"
             android:text="New In Dresses"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/sb_text_size_18"
-            android:textStyle="bold"
+            android:textSize="@dimen/sb_text_size_22"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -54,11 +53,11 @@
             android:layout_marginBottom="36dp"
             android:background="@color/white"
             android:ellipsize="end"
-            android:fontFamily="@font/gotham_font"
-            android:paddingStart="@dimen/sb_size_20"
-            android:paddingTop="@dimen/sb_size_8"
-            android:paddingEnd="@dimen/sb_size_20"
-            android:paddingBottom="@dimen/sb_size_8"
+            style="@style/MediumText"
+            android:paddingStart="@dimen/sb_size_22"
+            android:paddingTop="@dimen/sb_size_4"
+            android:paddingEnd="@dimen/sb_size_22"
+            android:paddingBottom="@dimen/sb_size_4"
             android:singleLine="true"
             android:text="Hooded, over sized, Graphic, tie dye"
             android:textAlignment="center"
