--- a/app/src/main/res/layout/item_new_product.xml
+++ b/app/src/main/res/layout/item_new_product.xml
@@ -34,7 +34,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/sb_size_8"
         android:layout_marginBottom="@dimen/sb_size_8"
-        android:fontFamily="@font/gotham_font"
+        style="@style/MediumText"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_14"
         android:textStyle="normal"
