--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:maxLength="8"
+        android:fontFamily="@font/gothambold"
         android:textColor="@color/black"
+        style="@style/BoldText"
         android:textSize="@dimen/sb_text_size_12"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="S******M" />
@@ -42,11 +43,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sb_size_6"
         android:layout_marginBottom="@dimen/sb_size_8"
-        android:fontFamily="@font/gotham_font"
+        android:fontFamily="@font/gothammedium"
         android:lineSpacingExtra="@dimen/sb_size_2"
         android:text="@string/loren_ipsum_placeholder_text"
         android:textColor="@color/black"
         android:textSize="12sp"
+        style="@style/MediumText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/item_review_name"
         app:layout_constraintTop_toBottomOf="@+id/item_review_name" />
