--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,9 +27,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gotham_font"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="6dp"
+                android:gravity="start|center"
+                android:paddingHorizontal="@dimen/sb_size_12"
+                android:paddingVertical="@dimen/sb_size_6"
+                android:focusable="true"
+                android:clickable="true"
                 android:text="@string/sign_in_register"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sb_text_size_16"
