--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,8 +67,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Mobile No."
+                            android:theme="@style/MyEditTextTheme"
                             android:gravity="start"
-                            android:digits="0987654321"
                             android:textSize="20sp"
                             android:maxLength="10"
                             android:maxLines="1"
@@ -87,12 +87,11 @@
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:clickable="true"
                         android:focusable="true"
-
-                        android:text="S i g n  i n"
+                        android:text="Sign in"
+                        android:letterSpacing="0.4"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sb_text_size_18"
                         android:textStyle="bold"
-
                         android:backgroundTint="@color/colorPrimaryDark"
                         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                         tools:layout_editor_absoluteX="24dp" />
@@ -177,6 +176,7 @@
                         android:onClick="loginWithPassActivity"
                         android:padding="@dimen/sb_size_5"
                         android:text="Login with Password"
+                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:background="?android:attr/selectableItemBackground"
                         android:textSize="@dimen/sb_text_size_16"
