--- a/app/src/main/res/layout/activity_login_with_pass.xml
+++ b/app/src/main/res/layout/activity_login_with_pass.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginWithPassActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
@@ -65,6 +74,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Mobile No. / Email"
+                            android:theme="@style/MyEditTextTheme"
                             android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -83,6 +93,7 @@
                             android:id="@+id/passwordEditText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:theme="@style/MyEditTextTheme"
                             android:hint="Password"
                             android:inputType="textPassword" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -96,23 +107,111 @@
                         android:background="@color/black"
                         android:onClick="signIn"
                         android:text="Sign in"
+                        android:letterSpacing="0.4"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sb_text_size_17"
                         android:textStyle="bold"
                         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="16dp"-->
+<!--                        android:padding="@dimen/sb_size_5"-->
+<!--                        android:onClick="signUpActivity"-->
+<!--                        android:text="New user? Sign up"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textSize="@dimen/sb_size_15"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/signInButton" />-->
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="16dp"
+                        android:id="@+id/linearlayout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:padding="@dimen/sb_size_5"
+                        app:layout_constraintTop_toBottomOf="@+id/signInButton"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="New user? "
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+                            android:textColor="@color/blue_grey_300" />
+
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:text="Sign Up"
+                            android:focusable="true"
+                            android:clickable="true"
+                            android:onClick="signUpActivity"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linearlayout"
+                        android:layout_marginTop="8dp"
+                        android:layout_centerVertical="true">
+
+                        <TextView
+                            android:id="@+id/tvText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:text="  O R  "
+                            android:textColor="@color/colorPrimaryDark"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="16dp"
+                            android:layout_toStartOf="@id/tvText"
+                            android:background="@color/colorPrimaryDark"
+                            />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="16dp"
+                            android:layout_toEndOf="@id/tvText"
+                            android:background="@color/colorPrimaryDark"
+                            />
+
+                    </RelativeLayout>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="36dp"
+                        android:onClick="loginWithOtpActivity"
                         android:padding="@dimen/sb_size_5"
-                        android:onClick="signUpActivity"
-                        android:text="New user? Sign up"
+                        android:text="Login with OTP"
+                        android:textStyle="bold"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/sb_size_15"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:textSize="@dimen/sb_text_size_16"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+                        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
