--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +7,23 @@
     android:fillViewport="true"
     tools:context=".activities.RegisterActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/sb_size_58"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,7 +43,6 @@
                         android:id="@+id/cardView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/sb_size_50"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/sb_size_60"
                         app:cardElevation="@dimen/sb_size_0"
@@ -66,7 +74,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Name"
-                            android:inputType="textEmailAddress" />
+                            android:inputType="textPersonName"
+                            android:theme="@style/MyEditTextTheme" />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -86,7 +95,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Email"
-                            android:inputType="textEmailAddress" />
+                            android:inputType="textEmailAddress"
+                            android:theme="@style/MyEditTextTheme" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -106,7 +116,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Number"
-                            android:inputType="phone" />
+                            android:inputType="phone"
+                            android:theme="@style/MyEditTextTheme" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -125,7 +136,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Password"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            android:theme="@style/MyEditTextTheme" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <Button
@@ -135,6 +147,7 @@
                         android:layout_marginHorizontal="@dimen/sb_size_20"
                         android:layout_marginTop="@dimen/sb_size_40"
                         android:background="@color/black"
+                        android:letterSpacing="0.4"
                         android:text="Sign Up"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sb_text_size_17"
@@ -151,13 +164,30 @@
                         android:gravity="center"
                         android:lineSpacingExtra="@dimen/sb_size_4"
                         android:padding="@dimen/sb_size_5"
-                        android:text="By clicking on sign up, you agree to our\nterms and conditions"
+                        android:text="By clicking on sign up, you agree to our"
+                        android:textSize="@dimen/sb_text_size_15"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:gravity="center"
+                        android:lineSpacingExtra="@dimen/sb_size_4"
+                        android:padding="@dimen/sb_size_5"
+                        android:text="Terms and Conditions"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sb_text_size_15"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.495"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView4" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.core.widget.NestedScrollView>
 
@@ -174,4 +204,4 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
