my orders fragment

--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -15,7 +15,7 @@
         android:maxLength="8"
         android:fontFamily="@font/gothambold"
         android:textColor="@color/black"
-        style="@style/BoldText"
+        style="@style/BoldBlackText"
         android:textSize="@dimen/sb_text_size_12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
