--- a/app/src/main/res/layout/item_container_new.xml
+++ b/app/src/main/res/layout/item_container_new.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="@dimen/sb_size_36"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
-            style="@style/BoldText"
+            style="@style/BoldBlackText"
             android:singleLine="true"
             android:text="New In Dresses"
             android:textAlignment="center"
@@ -71,7 +71,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/child_recycler_view"
+        android:id="@+id/child_order_recycler_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sb_size_4"
