--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -172,7 +172,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/signInButton" />
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/termsTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="true"
