--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -87,6 +87,7 @@
 
                 <TextView
                     android:id="@+id/myPaymentOptionsTextView"
+                    android:onClick="myPaymentOptionsOnClick"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center|start"
