Added FAQ Activity (dummy Data)

--- a/app/src/main/res/layout/activity_connect_to_us.xml
+++ b/app/src/main/res/layout/activity_connect_to_us.xml
@@ -63,6 +63,7 @@
                     android:background="@color/white"
                     android:text="Order Issues"
                     app:iconSize = "@dimen/sb_size_30"
+                    android:id="@+id/orderIssue"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -74,6 +75,7 @@
                     style="@style/Widget.MaterialComponents.Button.Icon"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/delivery"
                     android:layout_weight="1"
                     android:background="@color/white"
                     android:text="Delivery"
@@ -103,6 +105,7 @@
                     android:layout_weight="1"
                     android:background="@color/white"
                     android:text="Return &amp; Refund"
+                    android:id="@+id/refund"
                     android:elevation="@dimen/sb_size_0"
                     app:iconSize = "@dimen/sb_size_30"
                     android:textAllCaps="false"
@@ -119,6 +122,7 @@
                     android:layout_weight="1"
                     android:background="@color/white"
                     android:text="Payment &amp; Promos"
+                    android:id="@+id/payment"
                     android:textAllCaps="false"
                     app:iconSize = "@dimen/sb_size_30"
                     android:textColor="@color/black"
@@ -146,6 +150,7 @@
                     android:background="@color/white"
                     android:text="Product &amp; Stock"
                     android:textAllCaps="false"
+                    android:id="@+id/product"
                     app:iconSize = "@dimen/sb_size_30"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -160,6 +165,7 @@
                     android:layout_weight="1"
                     android:background="@color/white"
                     android:text="Account"
+                    android:id="@+id/account"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
                     app:iconSize = "@dimen/sb_size_30"
