--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.myordersfragment.MyOrdersFragment">
+    tools:context=".activities.MyOrdersActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
