--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/gothambold"
-                android:text="4.5"
+                android:text="0.0"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sb_text_size_24"
                 android:textStyle="bold"
@@ -192,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/gothammedium"
-                android:text="31%"
+                android:text="0%"
                 android:textColor="@color/black"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/progress_bar_small"
@@ -206,7 +206,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/gothammedium"
-                android:text="93%"
+                android:text="0%"
                 android:textColor="@color/black"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/progress_bar_size"
@@ -220,7 +220,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/gothammedium"
-                android:text="4%"
+                android:text="0%"
                 android:textColor="@color/black"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/progress_bar_large"
@@ -240,6 +240,19 @@
             app:layout_constraintStart_toStartOf="@id/review_layout"
             app:layout_constraintTop_toBottomOf="@id/review_layout"
             tools:listitem="@layout/item_review" />
+
+        <TextView
+            android:id="@+id/txt_empty_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No reviews for this product yet"
+            android:textColor="@color/grey_700"
+            android:textSize="@dimen/sb_text_size_18"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/reviews_recycler_view"
+            app:layout_constraintStart_toStartOf="@+id/reviews_recycler_view"
+            app:layout_constraintTop_toTopOf="@+id/reviews_recycler_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
