--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -254,6 +254,16 @@
             app:layout_constraintStart_toStartOf="@+id/reviews_recycler_view"
             app:layout_constraintTop_toTopOf="@+id/reviews_recycler_view" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/reviews_recycler_view"
+            app:layout_constraintStart_toStartOf="@+id/reviews_recycler_view"
+            app:layout_constraintTop_toTopOf="@+id/reviews_recycler_view" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
