--- a/app/src/main/res/layout/activity_f_a_q.xml
+++ b/app/src/main/res/layout/activity_f_a_q.xml
@@ -15,24 +15,9 @@
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
         app:title="FAQ" />
 
-    <TextView
-        android:id="@+id/headerTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginVertical="@dimen/sb_size_10"
-        android:layout_marginStart="@dimen/sb_size_20"
-        android:fontFamily="@font/gothamblack"
-        android:text="Order Issues"
-        android:textColor="@color/black"
-        android:textSize="@dimen/sb_text_size_20"
-        android:textStyle="bold" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/headerTextView"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="143dp" />
+        android:layout_below="@+id/toolbar" />
 </RelativeLayout>
