--- a/app/src/main/res/layout/layout_faq.xml
+++ b/app/src/main/res/layout/layout_faq.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/sb_size_20"
@@ -29,9 +32,10 @@
                 android:paddingHorizontal="@dimen/sb_size_20"
                 android:paddingVertical="@dimen/sb_size_5"
                 android:textColor="@color/black"
+                android:gravity="center|start"
                 android:clickable="true"
                 android:focusable="true"
-                android:textSize="@dimen/sb_text_size_20"
+                android:textSize="@dimen/sb_text_size_17"
                 android:textStyle="bold"
                 app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />
 
@@ -43,12 +47,12 @@
                 android:paddingVertical="@dimen/sb_size_5"
                 android:visibility="gone"
                 android:letterSpacing="0.05"
-                android:lineSpacingExtra="0.5dp"
+                android:lineSpacingExtra="@dimen/sb_size_5"
                 android:textColor="@color/black"
-                android:textSize="@dimen/sb_text_size_17" />
+                android:textSize="@dimen/sb_text_size_15" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
