--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -56,6 +56,7 @@
                         android:layout_weight="32"
                         android:gravity="center"
                         android:text="@string/sort"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:textColor="@color/blue_grey_900"
                         android:textSize="@dimen/sb_text_size_16" />
 
@@ -66,6 +67,7 @@
                         android:layout_weight="32"
                         android:gravity="center"
                         android:text="@string/category"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:textColor="@color/blue_grey_900"
                         android:textSize="@dimen/sb_text_size_16" />
 
@@ -75,6 +77,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="36"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:gravity="center_horizontal"
                         android:paddingVertical="@dimen/sb_size_8">
 
